--- a/Galil2/Galil2.vcxproj
+++ b/Galil2/Galil2.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Galil.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\header files\EmbeddedFunctions.h" />
